[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Cannon.gd" type="Script" id=1]
[ext_resource path="res://models/cannon.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/EnemySpawner.gd" type="Script" id=3]
[ext_resource path="res://fonts/Roboto.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/InputHandler.gd" type="Script" id=5]
[ext_resource path="res://materials/Circuit.tres" type="Material" id=6]
[ext_resource path="res://scripts/UIController.gd" type="Script" id=7]
[ext_resource path="res://materials/StainedGlass.tres" type="Material" id=8]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=9]

[sub_resource type="SphereShape" id=1]

[node name="Game" type="Node"]

[node name="World" type="Spatial" parent="."]

[node name="EnemySpawner" type="Spatial" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 3 )

[node name="Stained Glass" type="CSGBox" parent="World"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 0.1, 0, 0, -0.412719 )
material_override = ExtResource( 8 )

[node name="Circuit" type="CSGBox" parent="World"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 0.1, 0, 0, -1.50315 )
material = ExtResource( 6 )

[node name="Cannon" type="Area" parent="World"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, -1.5, 0 )
script = ExtResource( 1 )

[node name="BulletOrigin" type="Spatial" parent="World/Cannon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0 )

[node name="BulletDestination" type="Spatial" parent="World/Cannon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )

[node name="MeshInstance" type="MeshInstance" parent="World/Cannon"]
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="World/Cannon"]
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
current = true
script = ExtResource( 9 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InputHandler" type="Label" parent="UI/HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -36.0
custom_fonts/font = ExtResource( 4 )
align = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD"]
anchor_right = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/HUD/HBoxContainer"]
margin_right = 613.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="UI/HUD/HBoxContainer"]
margin_left = 617.0
margin_right = 1230.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Lives: 3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverScreen"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -106.5
margin_right = 106.5
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="UI/GameOverScreen/VBoxContainer"]
margin_top = 203.0
margin_right = 213.0
margin_bottom = 239.0
custom_fonts/font = ExtResource( 4 )
text = "Game Over!"
align = 1
valign = 1

[node name="FinalScore" type="Label" parent="UI/GameOverScreen/VBoxContainer"]
margin_top = 339.0
margin_right = 213.0
margin_bottom = 375.0
custom_fonts/font = ExtResource( 4 )
text = "Final Score: 500"

[node name="Restart" type="Button" parent="UI/GameOverScreen/VBoxContainer"]
margin_top = 475.0
margin_right = 213.0
margin_bottom = 517.0
custom_fonts/font = ExtResource( 4 )
text = "Restart"

[connection signal="pressed" from="UI/GameOverScreen/VBoxContainer/Restart" to="UI" method="_on_Restart_pressed"]
